tdf#121493: trleft may go after cellx

Change-Id: Iafa37bd8a198a8a0a3b0db0250bbbcf742b01339